modified edit profile screen

--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -32,7 +32,7 @@
       credits: { enabled: false },
       title: { text: null },
       xAxis: { min:0, categories: [''] },
-      yAxis: { min: 0, max: 100, title: { text: 'Percent Complete' } },
+      yAxis: { min: 0, max: 100, width: 450, title: { text: 'Percent Complete' } },
       legend: {
           backgroundColor: '#FFFFFF',
           reversed: true,
