--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,5 +1,7 @@
 %li
   %div{ style: "float:left;" }
+    :javascript
+      $(function(){ $(".comment_delete").on("ajax:success", function(){ $(this).parents("li").slideUp(); }); });
     = link_to (image_tag comment.user.profile_pic, class: "commentphoto"), comment.user
   %div{ style: "overflow:hidden; margin: 0 0 0 43px;" }
     %p{ style: "font-size: 13px; color: black; margin-left: 0;" }= comment.content
