--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -1,6 +1,4 @@
 %div.postfooter
-  :javascript
-    $(function(){ $(".comment_delete").on("ajax:success", function(){ $(this).parents("li").slideUp(); }); });
   %div.leftstuff{ style: "height: 27px; width: 100%; padding-top: 5px;" }
     %div.displayin.floatl
       %a.comment{ style: "position: relative; top: 5px;", onclick: "$(this).parents('.postfooter').find('.comments').slideDown();" } #{owner.comments.size.to_i} Comments
@@ -16,12 +14,11 @@
       - else
         %p= created_at.strftime("%B %d, %Y")
   %div.comments{ style: "display:none; text-align: left;" }
-    %ul{ style: "list-style: none; margin: 0 0 20px 0;" }
-      - unless owner.comments.empty?
-        - owner.comments.each do |comment|
-          = render "comments/comment", comment: comment
-      - else
-        %p.no_comments There are no comments for this yet.
+    - if owner.comments.empty?
+      %p.no_comments There are no comments for this yet. 
+    %ul{ style: "list-style: none; margin: 10px 0 20px 0;" }
+      - owner.comments.each do |comment|
+        = render "comments/comment", comment: comment
     - if current_user
       = form_for(current_user.comments.new, remote: true) do |f|
         %div{ style: "width: 100%" }
