--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -17,20 +17,13 @@
         %div#topboxcontent
           - if @user == current_user
             = link_to "Edit Profile", edit_user_path(@user), class: "button button-standard", style: "float:right;"
-          %div.span9{style: "min-height: 65px;"}
+          %div.span9{style: "min-height: 65px; vertical-align: top; margin-bottom: 10px;"}
             %h1= @user.name
             %p{ style: "font-size: 16px; margin: 5px 0 7px 0;"}= truncate(@enrolled_personas.collect(&:name).join(", "), length: 70)
         %div.challengecarousel
           %ul.inlinedisplay
             - @enrollments.each do |e|
-              %li
-                %div.mosaic-block.bar2
-                  = link_to path_path(e.path), class: "mosaic-overlay" do
-                    %div.details
-                      %h4{ style: "margin-bottom: 0px;" }= e.path.name
-                      %h5{ style: "margin-left: 10px; color: white; font-size: 12px;" } Level #{e.level}, #{e.total_points} points
-                  %div
-                    %img.mosaic-backdrop{ src: e.path.path_pic }
+              = render "shared/mosaic", { pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
   %div.row
     %div.span5
       %div.leftbox
@@ -65,7 +58,7 @@
             = link_to "Votes", user_path(@user, order: "votes"), class: "btn leftbtn"
             = link_to "Date", user_path(@user, order: "date"), class: "btn midbtn"
             %a.btn.rightbtn{ onclick: "$(this).parents('.leftboxheader').find('.questions_filter').slideDown();" } Question
-          %div.questions_filter{ style: "display:none;" }
+          %div.questions_filter{ style: "display:none; text-transform: none;" }
             - if @creative_tasks.empty?
               %p There are no responses to be viewed yet.
             - else
