--- a/app/views/tasks/_edit_task_form.html.erb
+++ b/app/views/tasks/_edit_task_form.html.erb
@@ -2,8 +2,8 @@
   <%= f.hidden_field :correct_answer, :value => 1 %>
   <%= f.hidden_field :randomize, :value => true %>
   <div style="margin-bottom:20px; float:right;">
-    <%= f.submit "Save", :id => "save_question_button", :class => "btn primary" %>
-    <span class="btn secondary" onclick="$(this).parents('td').find('div.question_display').show(); $(this).parents('td').find('.edit_task').remove();">Close</span>
+    <%= f.submit "Save", :id => "save_question_button", :class => "button button-info" %>
+    <span class="button button-standard" onclick="$(this).parents('td').find('div.question_display').show(); $(this).parents('td').find('.edit_task').remove();">Close</span>
   </div>
   <div>
     <h3 style="margin-left:70px;" id="form_title">Edit Question</h3>
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="span8 answers">
+      <div class="span8 answers" style="margin: 15px 0 0 172px;">
         <% @answers.each do |a|%>
         <div class="field clearfix">
           <%= f.label (a.is_correct ? "Correct answer" : "Wrong answer") %>
@@ -27,7 +27,7 @@
           <%= image_tag @stored_resource.obj.url, :style => "height: 100px; margin: 20px 0px 0px 150px;" %>
           <%= link_to "Remove Attachment", @stored_resource, :method => :delete, :confirm => "Are you sure you want to remove this attachment?", :style => "margin:10px 0 0 150px;" %>
         <% else %>
-          <%= link_to "Attachments", add_stored_resource_task_path(@task), :class => "btn secondary edit_button", :style => "margin: 20px 0px 0px 40px;", :method => :put %>
+          <%= link_to "Attachments", add_stored_resource_task_path(@task), :class => "button button-standard edit_button", :method => :put %>
         <% end %>
       </div>
       <div class="span8 suggestions" style="padding-top:10px; margin-left:150px;">
