--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,13 +1,13 @@
 <div class="alert-message error" style="display: none;"></div>
 <div class="question_display row">
-  <div style="float:right; margin-top:0px; display:none;" class="edit_task_buttons">
+  <div style="float:right; margin-top:5px; display:none;" class="edit_task_buttons">
     <%= link_to "Delete", task,
       method: :delete, 
       remote: true,
       confirm: "Are you sure you want to delete this question?", 
       "data-type" => "json",
-      class: "btn secondary delete_button" %>
-    <%= link_to "Edit", edit_task_path(task.id), remote: true, class: "btn secondary edit_button" %>
+      class: "button button-standard delete_button" %>
+    <%= link_to "Edit", edit_task_path(task.id), remote: true, class: "button button-standard edit_button" %>
   </div>
   <div style="padding:15px;">
     <blockquote style="margin-top:0px;">
