Preloading persona explore details so that we don't make a call out for each one.

--- a/app/views/layouts/_explore_modal.html.haml
+++ b/app/views/layouts/_explore_modal.html.haml
@@ -1,5 +1,16 @@
 :css
   explorenewusercontent: { height: 450px; }
+:javascript
+  function show_persona_challenges(){
+    $(".show_persona_select").on("ajax:success", function(xhr, data){
+      console.log("Attempting...");
+      $(".explorenewusercontent").fadeOut('fast', function(){
+        $(this).replaceWith(data, function(){
+          $(this).fadeIn();
+        });
+      });
+    });
+  }
 %div#explore_modal.modal.hide.fade
   - @personas ||= current_company.personas
   = render "personas/explore"
