--- a/app/views/mailer/welcome.html.haml
+++ b/app/views/mailer/welcome.html.haml
@@ -11,10 +11,10 @@
             %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+200+wide.png", :style => "width:145px"}/
       %tr
         %td{:style => "font-family:'lucida grande',tahoma,verdana,arial,sans-serif; color: #404040; padding:6px 12px 12px 12px; border-bottom:1px solid rgba(0, 0, 0, .1);"}
-          %span{:style => "font-size:24px;"} Welcome to MetaBright, #{@user.name}!
+          %span{:style => "font-size:24px;"} Welcome to <a href="http://www.metabright.com" style="text-decoration:none; color:inherit;">MetaBright</a>, #{@user.name}!
           %br/
           %hr{:style => "border:1px solid rgba(0, 0, 0, .1); border-bottom:none;"}
-            %p{:style => "font-size:12px;"} Thanks for signing up for MetaBright. Remember to always choose the same option to log in to MetaBright as you did to sign up. Otherwise, you might accidentally create two separate accounts.
+            %p{:style => "font-size:12px;"} Thanks for signing up for <a href="http://www.metabright.com" style="text-decoration:none">MetaBright</a>. Remember to always choose the same option to log in to MetaBright as you did to sign up. Otherwise, you might accidentally create two separate accounts.
             %p{:style => "font-size:12px;"} 
               If you have any questions about MetaBright, you can reach out to our support team at
               = succeed "." do
