--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -69,10 +69,10 @@ code,pre{font:inherit;}
 .mosaic-backdrop {display:none;position:absolute;top:0;height:100%;width:100%;background:#111; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
 .mosaic-overlay {display:none;z-index:5;position:absolute;width:100%; height:100%; background:#111;}
 .details h4{margin: 9px 10px 10px 10px;font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif;line-height: 10%;letter-spacing: 0.1em; color: rgba(255, 255, 255, .9);text-shadow: 1px 1px 0 black;}
-.details h5{height:10px; margin: 9px 12px; font: 300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color: #AAA; text-overflow:ellipsis;}
+.details h5{margin: 9px 12px; font: 300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color: #AAA;}
 .mosaic-overlay:hover .details>h4{color:white;}
 .leftbox{text-shadow: 0 1px 0 white;border: 1px solid rgba(0, 0, 0, .1); font-size:12px;position: relative; margin-bottom: 10px;line-height: 16px; border-radius: 6px; display:block;}
-.leftboxfooter{  background-color:whitesmoke; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 10px 12px;}
+.leftboxfooter{  background-color:whitesmoke; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 2px 10px 10px;}
 #ranks { list-style: none; margin:0px; padding: 10px 0; }
 #ranks li { padding: 2px 0 7px 12px; font:normal 15px arial, sans-serif; }
 #ranks li:last-child { border-bottom-left-radius: 6px; border-bottom-right-radius:6px; }
@@ -97,7 +97,7 @@ code,pre{font:inherit;}
 .profilepersonaicons li{ display:inline-block; margin-right:8px; height:30px; width:30px; }
 .profilepersonaicons img{ margin-right:8px; height:30px; width:30px; }
 .leftrailcontent{ list-style-type: none; display:list-item; margin-top:3px; }
-.leftrailicon{ height:46px; width:46px; border-radius:3px; margin-right:3px; }
+.leftrailicon{ height:46px; width:46px; border-radius:3px; margin-right:3px; margin-top:5px; }
 .leftbox{text-shadow: 0 1px 0 white; border: 1px solid rgba(0, 0, 0, .1);font-size:12px; position: relative; margin-bottom: 12px;line-height: 16px;border-radius: 6px; display:block;}
 .leftboxfooter ul{ list-style-type:none; margin:0; }
 .leftboxfooter span{ font-size:11px; color:gray; }
