--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -10,31 +10,9 @@
           At MetaBright, we believe in the transparency of knowledge.
         %p
           In a nutshell, this means you deserve to know what you know, and you deserve to know what other people know.
-          We think this leads to more meaningful connections, faster growth, and makes your passions way more fun.
+          We think this allows for more meaningful connections, faster growth, and can make your passions way more fun.
         %p
           Think about it: would you rather travel down a path all by yourself, uncertain of who you're taking advice from and the kind of progress you're making, or would you rather have proof of what you know, and have access to guidance from the most reputable people?
-        %p{style: "display:none"}
-          Who you are should not be dictated by the lot you were given in life.
-          Where you were born, who your family is, the opportunities you were given, these things don't matter.
-          What matters is what you can actually
-          = succeed "." do
-            %em do
-        %p{style: "display:none"}
-          Join MetaBright, and show the world what you're made of.
-        %p{:style => "display:none;"}
-          You deserve to be recognized for what you know, and you deserve to know other people's credentials as well.
-          We're not talking about silly things like where someone went to school, or who chose to employ them, but more important stuff.
-          Like what has this person done? How do they compare to their peers? what does this person actually know how to
-          = succeed "?" do
-            %em do
-          So before you follow the guidance of someone else, you should know that they are a reputable source.
-          Transparency of knowledge.
-          Where you were born, who your family is, what car you drive -- these things don't define a person.
-          All that matters is your knowledge, your abilities, and what you can
-          = succeed "." do
-            %em do
-          We created MetaBright for people like us.
-          People who believe in the importance of self-development, in mentorship, and in friendly competition.
         %h4 Our Team
         %p
           %a{:href => "#"}> Jonathan Kirst
@@ -43,7 +21,7 @@
         %p
           %a{:href => "#"}> Nathaniel Sokoll-Ward
           \:
-          %span jfaijfaiejkla dslkfjioejf lakjflkajdfo iajdf asdfklaj sdklfjalkd fjalksdjf alksdjf alsdflk aflk a fla a lkajslfk askldfj alkfjasdfa asdfasdf asdfasdf asdf adsfadsfadf asdfasfkjakdsjf alkj lka kljkas lkajsfioej f  asdf  a
+          %span Ethical hustler, and all around good dude. Ex-Googler and former Master of the Universe, now spending time working on his guitar chops, and developing a more nomadic lifestyle.
         %h4 Still want more?
         %p
           Check out our
