--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -3,10 +3,9 @@
   = render "layouts/head"
   :css
     body { background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg'); background-repeat:no-repeat; background-attachment:fixed;background-size:100% 100%;font-family: 'Muli', sans-serif;}
-    #landingbox { height: 335px; width: 695px; margin-left: auto; margin-right: auto; margin-top: 90px; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
+    #landingbox { width: 695px; margin-left: auto; margin-right: auto; margin-top: 90px; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
     .explorenewusercontent{ box-shadow: none; }
 %body
   = render "layouts/navbar", { no_bar: (@no_bar.nil? ? true : @no_bar) }
-  %div#landingbox
-    = yield
+  = yield
   = render "layouts/footer" if @show_footer
