--- a/app/views/pages/landing.html.haml
+++ b/app/views/pages/landing.html.haml
@@ -13,17 +13,18 @@
   .container {width: 940px; margin-left: auto; margin-right: auto; zoom: 1; display:inline-block; padding:3px 0 0 142px;}
   .container h3{ left:68px; }
   .landingbuttontext{color:white; font-size:13px; display:inline-block; position:relative; bottom:9px; left:5px; font-family:'MuliRegular'; font-weight: bold;}
-  #landingbox{ margin-top: 130px; }
-      
-%div#logospace
-  %img#landinglogo{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo" }
-%div#tagline
-  %span We believe that everyone has the right to be recognized for their knowledge and skills. From accordion playing to zoology, compete with others, and grow together.
-%div#buttonspace
-  %center
-    = link_to "/auth/google_oauth2", style: "margin-right:88px;", class: "btn danger" do
-      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png" }
-      %span.landingbuttontext Sign in with Google »
-    = link_to "/auth/facebook", class: "btn danger" do
-      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png" }
-      %span.landingbuttontext Sign in with Facebook »
+  #landingbox{ margin-top: 130px; height:335px; width: 695px; margin-left: auto; margin-right: auto; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
+
+%div#landingbox      
+  %div#logospace
+    %img#landinglogo{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo" }
+  %div#tagline
+    %span We believe that everyone has the right to be recognized for their knowledge and skills. From accordion playing to zoology, compete with others, and grow together.
+  %div#buttonspace
+    %center
+      = link_to "/auth/google_oauth2", style: "margin-right:88px;", class: "btn danger" do
+        %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png" }
+        %span.landingbuttontext Sign in with Google »
+      = link_to "/auth/facebook", class: "btn danger" do
+        %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png" }
+        %span.landingbuttontext Sign in with Facebook »
