--- a/app/views/pages/tos.html.haml
+++ b/app/views/pages/tos.html.haml
@@ -6,5 +6,18 @@
     %hr{:style => "margin:0"}
       .aboutbody{ style: "min-height: 333px;" }
         %h4 The Rules
-        %p aklsdjf aksdfj aklsdjf lkas djflkasd jfalksdf jkalsd f
-      
+        %p 
+          We built MetaBright for people like us. People who like to get better at life every single day, and think it's easier to do so with the right people around.
+          If you infringe upon our users ability to do this, we will unleash the wrath of Hades upon you.
+          Or we'll ban you - depends on the mood we're in that day.
+        %p
+          The rules are, quite simply, don't be a jerk - treat others the way you want to be treated.
+          And if you like to be abused, then MetaBright isn't the place for you, but we can suggest some specialty clubs in San Francisco that might be up your alley.
+        %ul
+          %li No hate speech
+          %li No harassment or threats of violence against others
+          %li No spam or adverstisement of any outside product or service
+          %li No sexually explicit material
+          %li No automatically generated accounts, comments, or votes
+          %li Profanity is fine, so long as it's used without malicious intent against someone or something      
+        %p And lastly, we retain final say on all matters regarding this Terms of Service. 
