Lots of changes.

--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -17,7 +17,7 @@
         %p
           %a{:href => "#"}> Jonathan Kirst
           \:
-          %span fjasdflkj aifjalksfjkasd fklafk sdkljasfida jljlkfsdk lfa lkfdas klfdak lja kljafsd l kfjdsak lajf kljafs klfa kljaf klfsda kljfda ljkadfsk lja fdslkj akldjfs klajfsdkl ajf kljafsdkljasfd kl klj
+          %span Devout Ruby on Rails hacker and PHP refugee. Unapologetic fanatic of San Francisco food, beer and all things Pac-12. You can find him at Thieves in the Mission if you want to lose a debate about SEC vs. Pac-12 football.
         %p
           %a{:href => "#"}> Nathaniel Sokoll-Ward
           \:
