--- a/app/views/sections/finish.html.haml
+++ b/app/views/sections/finish.html.haml
@@ -1,5 +1,5 @@
 :css
-  .body.container { border: 0px; background-color: transparent; box-shadow: none; margin-top: -40px; }
+  .body.container { border: 0px; background-color: transparent; box-shadow: none; }
 %div.quizcontainer
   %div.quizspace
     %div.quizheader
