--- a/app/views/sections/start.html.haml
+++ b/app/views/sections/start.html.haml
@@ -1,3 +1,3 @@
 :css
-  .body.container { border: 0px; background-color: transparent; box-shadow: none; margin-top: -40px; }
+  .body.container { border: 0px; background-color: transparent; box-shadow: none; }
 = render @partial
