persona icons in explore style updates

--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -4,7 +4,7 @@
   :css
     body { background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg'); background-repeat:no-repeat; background-attachment:fixed;background-size:100% 100%;font-family: 'Muli', sans-serif;}
     #landingbox { width: 695px; margin-left: auto; margin-right: auto; margin-top: 90px; background-color: whiteSmoke;border-radius: 6px;border: 1px solid rgba(0, 0, 0, .1);background: rgba(255, 255, 255, 0.8); }
-    .explorenewusercontent{ box-shadow: none; margin-top: 75px; }
+    .explorenewusercontent{ box-shadow: none; }
     .show_persona_select button { margin-top: 0px; }
     .persona_preview { height; 172px; }
 %body
