--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -56,13 +56,13 @@
     %div{ style: "display:inline-block; vertical-align:top;" }
       %div.pointsandstreakspace
         %div.pointspace.counterbox
-          %p.counter{style: "display:block"}
+          %span.counter{style: "display:block"}
             - earned_points_digits = @enrollment.total_points.to_s.split("").reverse.push("0").push("0").push("0").reverse.slice(-4, 4)
             - earned_points_digits.each do |d|
               %span.digit
                 %span{ title: "#{d}" }= d
           %br
-          %p Points
+          %span Points
         %div.streakspace.counterbox
           %span.counter
             - streak = (@streak > 0 ? @streak : 0).to_s.split("").reverse.push("0").reverse.slice(-2, 2)
