--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -1,5 +1,5 @@
 :css
-  #landingbox{ margin-top: 90px; background: transparent; background-color: none; border: 0; }
+  #landingbox{ background: transparent; background-color: none; border: 0; }
 %div.explorenewusercontent
   :javascript
     $(function(){
