--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -14,8 +14,9 @@
       close_button();
     });
   %div.exploreheader
-    %div.modal_close
-      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
+    - unless current_user.personas.empty?
+      %div.modal_close
+        %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
     %h1{ style: "font-size: 23px; margin-bottom: 3px;" }
       - if current_user.personas.empty?
         Explore: Adopt your first Persona...
