--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -30,8 +30,9 @@
     .modal_close img{width:20px; height:20px;}
     
   %div.exploreheader
-    %div.modal_close{ style: "margin-right:1px;" }
-      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
+    - unless current_user.personas.empty?
+      %div.modal_close{ style: "margin-right:1px;" }
+        %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
     %div{ style: "padding-bottom:8px;" }
       = image_tag @persona.picture
       %h1{ style: "font-size: 23px; position:relative; top:8px; line-height:1;" }
