--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -9,5 +9,6 @@
     .persona_preview { height; 172px; }
 %body
   = render "layouts/navbar", { no_bar: (@no_bar.nil? ? true : @no_bar) }
+  = render "layouts/explore_modal" if @show_footer
   = yield
   = render "layouts/footer" if @show_footer
