--- a/app/views/paths/_settings_modal.html.erb
+++ b/app/views/paths/_settings_modal.html.erb
@@ -1,4 +1,4 @@
-<div id="settings_modal" class="modal hide fade" style="top: 30%; width: 600px;">
+<div id="settings_modal" class="modal hide fade" style="top: 5%; margin-top: 0px; width: 600px;">
   <div class="modal-header">
     <a href="#" class="close"></a>
     <h3><%= name_for_paths %> Settings</h3>
