--- a/app/views/layouts/_explore_modal.html.haml
+++ b/app/views/layouts/_explore_modal.html.haml
@@ -1,3 +1,10 @@
+%html
+%head
+  :css
+    .explorecontainer{background:none; margin-top: 40px; border:none; width:743px; }
+    .explorenewusercontent{margin:30px;}
+
+
 %div#explore_modal.modal.hide.fade
   - @personas ||= current_company.personas
   = render "personas/explore"
