--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -3,9 +3,10 @@
   = render "layouts/head"
   :css
     body { background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg'); background-repeat:no-repeat; background-attachment:fixed;background-size:100% 100%;font-family: 'Muli', sans-serif;}
-    .explorenewusercontent{ box-shadow: none; margin-top: 110px; }
+    .explorenewusercontent{ box-shadow: none; }
     .show_persona_select button { margin-top: 0px; }
-    .persona_preview { height; 172px; }
+    .persona_preview { height; 172px; margin-top:15px;}
+    .explorecontainer{border-radius: 6px;border: 1px solid rgba(0, 0, 0, 0.0980392);background: rgba(255, 255, 255, 0.8);}
 %body
   = render "layouts/navbar", { no_bar: (@no_bar.nil? ? true : @no_bar) }
   = yield
