--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -1,38 +1,40 @@
 :css
   #landingbox{ background: transparent; background-color: none; border: 0; }
-%div.explorenewusercontent
-  :javascript
-    $(function(){
-      $(".persona_select").click(function(){
-        $(".persona_select.active").removeClass("active");
-        $(this).addClass("active");
-        var id = $(this).attr("id").substring(15);
-        $(".persona_preview").html($(".persona_preview_"+id).html());
-        show_persona_challenges();
+
+%div.explorecontainer
+  %div.explorenewusercontent
+    :javascript
+      $(function(){
+        $(".persona_select").click(function(){
+          $(".persona_select.active").removeClass("active");
+          $(this).addClass("active");
+          var id = $(this).attr("id").substring(15);
+          $(".persona_preview").html($(".persona_preview_"+id).html());
+          show_persona_challenges();
+        });
+        $(".persona_select:first").addClass("active");
+        close_button();
       });
-      $(".persona_select:first").addClass("active");
-      close_button();
-    });
-  %div.exploreheader
-    %div.modal_close
-      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
-    %h1{ style: "font-size: 23px; margin-bottom: 3px;" }
-      - if current_user.personas.empty?
-        Explore: Adopt your first Persona...
-      - else
-        Explore: Choose a persona...
-    %div
-      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; position:relative; top:1px;" }
-      %p{ style: "font-size: 14px; line-height: 28px; display:inline; "} Your Persona should represent you and your interests. You can always enroll in multiple Personas. 
-  %hr{ style: "margin:0px;" }
-  %div.exploretiles
-    - @personas.each do |persona|
-      %div.singleexploretile
-        %a{ href: "#", class: "persona_select", id: "persona_select_#{persona.id}" }
-          %div.exploretileimage
-            = image_tag persona.picture, size: "85x85"
-  %div.persona_preview
-    = render "personas/preview", { persona: @personas.first }
-  %div.hidden_persona_previews{ style: "display: none;" }
-    - @personas.each do |persona|
-      = render "personas/preview", { persona: persona }
+    %div.exploreheader
+      %div.modal_close
+        %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
+      %h1{ style: "font-size: 23px; margin-bottom: 3px;" }
+        - if current_user.personas.empty?
+          Explore: Adopt your first Persona...
+        - else
+          Explore: Choose a persona...
+      %div
+        %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; position:relative; top:1px;" }
+        %p{ style: "font-size: 14px; line-height: 28px; display:inline; "} Your Persona should represent you and your interests. You can always enroll in multiple Personas. 
+    %hr{ style: "margin:0px;" }
+    %div.personatiles
+      - @personas.each do |persona|
+        %div.singleexploretile
+          %a{ href: "#", class: "persona_select", id: "persona_select_#{persona.id}" }
+            %div.exploretileimage
+              = image_tag persona.picture, size: "85x85"
+    %div.persona_preview
+      = render "personas/preview", { persona: @personas.first }
+    %div.hidden_persona_previews{ style: "display: none;" }
+      - @personas.each do |persona|
+        = render "personas/preview", { persona: persona }
