--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -20,9 +20,9 @@
         %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
       %h1{ style: "font-size: 23px; margin-bottom: 3px;" }
         - if current_user.personas.empty?
-          Explore: Adopt your first Persona...
+          <strong>Explore:</strong> Adopt your first Persona...
         - else
-          Explore: Choose a persona...
+          <strong>Explore:</strong> Choose a persona...
       %div
         %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; position:relative; top:1px;" }
         %p{ style: "font-size: 14px; line-height: 28px; display:inline; "} Your Persona should represent you and your interests. You can always enroll in multiple Personas. 
