explore bug squashing

--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -14,6 +14,7 @@
         });
         $(".persona_select:first").addClass("active");
         close_button();
+        show_persona_challenges();
       });
     %div.exploreheader
       %div.modal_close
