--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -67,6 +67,7 @@ code,pre{font:inherit;}
 .bar2 .mosaic-overlay:hover { background-color: rgba(0,0,0,1); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); text-decoration: none; }
 .mosaic-block {display:inline-block;  position:relative;overflow:hidden;width:200px;height:80px;margin-right:10px; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
 .mosaic-backdrop {display:none;position:absolute;top:0;height:100%;width:100%;background:#111; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px;}
+.clip_pic{height:200px;width:200px;margin-top:-45px;}
 .mosaic-overlay {display:none;z-index:5;position:absolute;width:100%; height:100%; background:#111;}
 .details h4{margin: 9px 10px 10px 10px;font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif;line-height: 10%;letter-spacing: 0.1em; color: rgba(255, 255, 255, .9);text-shadow: 1px 1px 0 black;}
 .details h5{margin: 9px 12px; font: 300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color: #AAA;}
