--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,6 +3,8 @@
   %span.footerlinks
     = link_to "About", about_path 
     \/
+    = link_to "Challenges", challenges_path
+    \/
     %a{href: "http://metabright.blogspot.com/", target: "_blank"} Blog
     \/
     %a{:href => "https://metabright.uservoice.com/", :target => "_blank"} Feedback
